hphp/test/slow/enum-invalid-base/callable.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/callable.php on line 3
